--- a/BarcodeHelper/wwwroot/css/app.css
+++ b/BarcodeHelper/wwwroot/css/app.css
@@ -1,5 +1,25 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+@media (prefers-color-scheme: light) {
+    body {
+        --background: white;
+        --font-color: black;
+        --highlight: #f7f7f7;
+        --highlight-2: #e2e3e5;
+        --link: #0366d6;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        --background: #2d2d2d;
+        --font-color: white;
+        --highlight: #393939;
+        --highlight-2: #414648;
+        --link: #3ca4ff;
+    }
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -9,7 +29,21 @@ h1:focus {
 }
 
 a, .btn-link {
-    color: #0077cc;
+    color: var(--link);
+}
+
+.alert-secondary {
+    background-color: var(--highlight-2);
+    color: var(--font-color);
+}
+
+.table {
+    color: var(--font-color);
+}
+
+div.main {
+    background-color: var(--background);
+    color: var(--font-color);
 }
 
 .btn-primary {
