Use EditForm for better UX

--- a/BarcodeHelper/Pages/Index.razor
+++ b/BarcodeHelper/Pages/Index.razor
@@ -4,42 +4,46 @@
     UPC-A Missing Digit Solver
 </h3>
 
-<MudStack Spacing="2">
-    <MudTextField @bind-Value="UpcCode"
-                  Label="Enter UPC-A code with a missing digit (use ? for the missing digit)"
-                  Variant="Variant.Outlined"
-                  Adornment="Adornment.Start"
-                  AdornmentIcon="Icons.Material.Fingerprint"
-                  MaxLength="12"
-                  Counter="12"
-                  Immediate="true"
-                  Validation="@(new Func<string, IEnumerable<string>>(ValidateUpc))"
-                  Mask="@digitMask" />
+<EditForm Model="@upcEditModel"
+          OnValidSubmit="SolveMissingDigit">
+    <MudStack Spacing="2">
+        <MudTextField @bind-Value="upcEditModel.UpcCode"
+                      Label="Enter UPC-A code with a missing digit (use ? for the missing digit)"
+                      Variant="Variant.Outlined"
+                      Adornment="Adornment.Start"
+                      AdornmentIcon="Icons.Material.Fingerprint"
+                      MaxLength="12"
+                      Counter="12"
+                      Immediate="true"
+                      Validation="@(new Func<string, IEnumerable<string>>(ValidateUpc))"
+                      Mask="@digitMask" />
 
-    <MudButton Variant="Variant.Filled"
-               Color="Color.Primary"
-               OnClick="SolveMissingDigit">
-        Solve
-    </MudButton>
+        <MudButton Variant="Variant.Filled"
+                   Color="Color.Primary"
+                   Disabled="@UpcIsInvalid"
+                   ButtonType="ButtonType.Submit">
+            Solve
+        </MudButton>
 
-    @if (!string.IsNullOrEmpty(CompletedUpcCode))
-    {
-        <MudAlert Severity="Severity.Success">
-            Completed UPC-A code: @CompletedUpcCode
-        </MudAlert>
+        @if (!string.IsNullOrEmpty(CompletedUpcCode))
+        {
+            <MudAlert Severity="Severity.Success">
+                Completed UPC-A code: @CompletedUpcCode
+            </MudAlert>
 
-        <MudPaper Elevation="0"
-                  Height="125px"
-                  MaxHeight="125px"
-                  Outlined="@true">
-            <BarcodeComponent Style="width:200px;height:100px"
-                              BarcodeType="@BarcodeTypes.UpcA"
-                              Content="@CompletedUpcCode"
-                              IncludeEANContentAsText="@true">
-            </BarcodeComponent>
-            <MudText>
-                @CompletedUpcCode
-            </MudText>
-        </MudPaper>
-    }
-</MudStack>
+            <MudPaper Elevation="0"
+                      Height="125px"
+                      MaxHeight="125px"
+                      Outlined="@true">
+                <BarcodeComponent Style="width:200px;height:100px"
+                                  BarcodeType="@BarcodeTypes.UpcA"
+                                  Content="@CompletedUpcCode"
+                                  IncludeEANContentAsText="@true">
+                </BarcodeComponent>
+                <MudText>
+                    @CompletedUpcCode
+                </MudText>
+            </MudPaper>
+        }
+    </MudStack>
+</EditForm>
