--- a/BarcodeHelper/MainLayout.razor
+++ b/BarcodeHelper/MainLayout.razor
@@ -6,7 +6,28 @@
 
 <MudLayout>
     <MudAppBar>
-        Barcode Helper
+        <MudText Typo="@Typo.h4">
+            Barcode Helper
+        </MudText>
+        <MudSpacer />
+        <MudStack Row="@true">
+            <MudButton Class="d-none d-md-flex"
+                       EndIcon="@Icons.Custom.Brands.GitHub"
+                       Href="https://github.com/codemonkey85/BarcodeHelper"
+                       Target="_blank"
+                       title="Source code on GitHub"
+                       Color="@Color.Inherit"
+                       Variant="@Variant.Outlined">
+                Source code on GitHub
+            </MudButton>
+            <MudIconButton Class="d-md-none"
+                           Icon="@Icons.Custom.Brands.GitHub"
+                           Href="https://github.com/codemonkey85/BarcodeHelper"
+                           Target="_blank"
+                           Title="Source code on GitHub"
+                           Color="@Color.Inherit"
+                           Variant="@Variant.Outlined" />
+        </MudStack>
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.False">
