Support dark theme

--- a/BarcodeHelper/Pages/Index.razor
+++ b/BarcodeHelper/Pages/Index.razor
@@ -33,7 +33,7 @@
                       Height="125px"
                       MaxHeight="125px"
                       Outlined="@true">
-                <BarcodeComponent Style="width:200px;height:100px"
+                <BarcodeComponent Style="width:200px;height:100px;background-color:white;"
                                   BarcodeType="@BarcodeTypes.UpcA"
                                   Content="@CompletedUpcCode"
                                   IncludeEANContentAsText="@true">
