--- a/BarcodeHelper/MainLayout.razor
+++ b/BarcodeHelper/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider />
+<MudThemeProvider @ref="@mudThemeProvider"
+                  @bind-IsDarkMode="@isDarkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
@@ -11,6 +12,9 @@
         </MudText>
         <MudSpacer />
         <MudStack Row="@true">
+            <MudSwitch @bind-Value="@isDarkMode"
+                       Color="Color.Primary"
+                       Label="@(isDarkMode ? "Dark" : "Light")" />
             <MudButton Class="d-none d-md-flex"
                        EndIcon="@Icons.Custom.Brands.GitHub"
                        Href="https://github.com/codemonkey85/BarcodeHelper"
